--- a/smart-hvac.yaml
+++ b/smart-hvac.yaml
@@ -1,7 +1,7 @@
 blueprint:
   name: Smart Thermostat with Day/Night Sensors
   description: >
-    **Version: 1.7.0**
+    **Version: 1.8.0**
 
     Intelligent thermostat control using separate day and night temperature sensors with
     dynamic day/night temperature targets and circadian rhythm simulation.
@@ -395,15 +395,44 @@ actions:
                     {% if humidity_entity != "" and states(humidity_entity) not in ['unknown', 'unavailable', 'none'] %}
                       {% set humidity = states(humidity_entity) | float %}
                       {% set actual_temp = current_target_temp %}
-                      {% if actual_temp > 20 and humidity > 40 %}
-                        {% set humidity_factor = (humidity - 40) / 100 %}
-                        {% set feels_like_adjustment = humidity_factor * (actual_temp - 20) * 0.3 %}
-                        {{ actual_temp + feels_like_adjustment }}
+
+                      {% if actual_temp >= 20 %}
+                        {# Heat index calculation - high temp + high humidity feels warmer #}
+                        {% if humidity > 40 %}
+                          {% set humidity_factor = (humidity - 40) / 100 %}
+                          {# Increased coefficient from 0.5 to 0.8 for more pronounced effect #}
+                          {% set feels_like_adjustment = humidity_factor * (actual_temp - 19) * 0.8 %}
+                          {{ actual_temp + feels_like_adjustment }}
+                        {% elif humidity < 30 %}
+                          {# Dry air can feel slightly cooler than actual temperature #}
+                          {% set dry_factor = (30 - humidity) / 100 %}
+                          {% set feels_like_adjustment = dry_factor * 0.5 %}
+                          {{ actual_temp - feels_like_adjustment }}
+                        {% else %}
+                          {{ actual_temp }}
+                        {% endif %}
+                      {% elif actual_temp <= 18 %}
+                        {# Wind chill approximation - high humidity makes cold feel colder #}
+                        {% if humidity > 60 %}
+                          {% set humidity_factor = (humidity - 60) / 100 %}
+                          {% set feels_like_adjustment = humidity_factor * 0.8 %}
+                          {{ actual_temp - feels_like_adjustment }}
+                        {% else %}
+                          {{ actual_temp }}
+                        {% endif %}
                       {% else %}
                         {{ actual_temp }}
                       {% endif %}
                     {% else %}
                       {{ current_target_temp }}
+                    {% endif %}
+
+                  # Get the current humidity for use in calculations and debug output
+                  current_humidity: >
+                    {% if humidity_entity != "" and states(humidity_entity) not in ['unknown', 'unavailable', 'none'] %}
+                      {{ states(humidity_entity) | float }}
+                    {% else %}
+                      unknown
                     {% endif %}
 
                   # Determine the thermal contribution of the building envelope
@@ -475,7 +504,15 @@ actions:
                     {% endif %}
 
                     {% if natural_trend == 'warming' %}
-                      {{ (base_factor + solar_factor + feels_adjustment) * -1 }}
+                      {# More conservative adjustment for warming trends to prevent over-cooling #}
+                      {% set temp_diff = current_outdoor_temp|float - desired_temp|float %}
+                      {% if temp_diff > 0 %}
+                        {# Only make significant adjustments if outdoor temp is higher than desired #}
+                        {{ (base_factor + solar_factor + feels_adjustment) * -0.7 }}
+                      {% else %}
+                        {# Minimal adjustment when outdoor is still cooler than indoor #}
+                        {{ (base_factor + solar_factor + feels_adjustment) * -0.3 }}
+                      {% endif %}
                     {% elif natural_trend == 'cooling' %}
                       {{ base_factor - feels_adjustment }}
                     {% else %}
@@ -497,23 +534,55 @@ actions:
                   # Shifts the entire range up or down based on the natural trend.
                   weather_adjustment_for_range: "{{ weather_adjustment_factor }}"
 
-              # These variables calculate the new low and high setpoints for heat/cool mode.
-              # They incorporate the standard offset adjustment and the new weather-based adjustment.
-              # The result is rounded to the nearest 0.5° to match thermostat hardware constraints.
+                            # Calculate new target setpoints with directional adjustments
               - variables:
-                  new_target_low: >
-                    {% set base_low = current_target_low + offset_adjustment %}
-                    {{- ((base_low + weather_adjustment_for_range) * 2) | round / 2 -}}
-              - variables:
-                  new_target_high: >
-                    {% set base_high = current_target_high + offset_adjustment %}
-                    {% set preliminary_high = (base_high + weather_adjustment_for_range) %}
-                    {% set final_low = new_target_low | float %}
-                    {% if preliminary_high < (final_low + 1) %}
-                      {{- ((final_low + 1) * 2) | round / 2 -}}
+                  # Calculate the new heating setpoint
+                  calculated_low: >-
+                    {% if temp_difference < -0.5 or (natural_trend == 'cooling' and offset_adjustment != 0) %}
+                      {% if offset_adjustment > 0 %}
+                        {{ ((current_target_low + offset_adjustment|abs) * 2) | round / 2 }}
+                      {% else %}
+                        {{ current_target_low }}
+                      {% endif %}
+                    {% elif natural_trend == 'warming' and weather_adjustment_for_range|float < 0 %}
+                      {{ ((current_target_low + weather_adjustment_for_range) * 2) | round / 2 }}
                     {% else %}
-                      {{- (preliminary_high * 2) | round / 2 -}}
+                      {{ current_target_low }}
                     {% endif %}
+
+              - variables:
+                  # Make new_target_low a simple variable assignment
+                  new_target_low: "{{ calculated_low }}"
+
+              - variables:
+                  # Calculate the new cooling setpoint
+                  calculated_high: >-
+                    {% if temp_difference > 0.5 or (natural_trend == 'warming' and offset_adjustment != 0) %}
+                      {% if offset_adjustment < 0 %}
+                        {{ ((current_target_high + offset_adjustment) * 2) | round / 2 }}
+                      {% else %}
+                        {{ current_target_high }}
+                      {% endif %}
+                    {% elif natural_trend == 'cooling' and weather_adjustment_for_range|float > 0 %}
+                      {{ ((current_target_high + weather_adjustment_for_range) * 2) | round / 2 }}
+                    {% else %}
+                      {{ current_target_high }}
+                    {% endif %}
+
+              - variables:
+                  # Ensure minimum 1°C difference between setpoints
+                  final_high: >-
+                    {% set low = new_target_low|float %}
+                    {% set high = calculated_high|float %}
+                    {% if high < (low + 1) %}
+                      {{ ((low + 1) * 2) | round / 2 }}
+                    {% else %}
+                      {{ high }}
+                    {% endif %}
+
+              - variables:
+                  # Make new_target_high a simple variable assignment
+                  new_target_high: "{{ final_high }}"
               # Creates a persistent notification with detailed debug information for troubleshooting.
               - choose:
                   - conditions: "{{ debug_notifications_enabled }}"
@@ -531,11 +600,14 @@ actions:
                             Weather: Outdoor: {{ current_outdoor_temp }}°C | Condition: {{ current_condition }}
                             Thermal Analysis: Solar Impact: {{ solar_impact }} | Building: {{ building_thermal_contribution }}
                             Natural Trend: {{ natural_trend | title }} | Feels Like: {{ feels_like_temp|round(1) }}°C
-                            Gradient: {{ (desired_temp - current_outdoor_temp) | round(1) }}°C
+                            {% if current_humidity != "unknown" %}Humidity: {{ current_humidity|round(1) }}% | {% endif %}Gradient: {{ (desired_temp - current_outdoor_temp) | round(1) }}°C
 
-                            {% if offset_adjustment != 0 or weather_adjustment_for_range != 0 %}
-                            Action: Adjusting by {{ (offset_adjustment|float + weather_adjustment_for_range|float) | round(1) }}°C → New Range: {{ new_target_low }}-{{ new_target_high }}°C
-                            {% if new_target_low == current_target_low and new_target_high == current_target_high %}(No Change){% endif %}
+                            {% set low_change = new_target_low|float - current_target_low|float %}
+                            {% set high_change = new_target_high|float - current_target_high|float %}
+                            {% if low_change != 0 or high_change != 0 %}
+                            Action: Adjusting setpoints → New Range: {{ new_target_low }}-{{ new_target_high }}°C
+                            {% if low_change != 0 %}Heat: {{ current_target_low }} → {{ new_target_low }} ({{ low_change|round(1) }}°C){% endif %}
+                            {% if high_change != 0 %}Cool: {{ current_target_high }} → {{ new_target_high }} ({{ high_change|round(1) }}°C){% endif %}
                             {% else %}
                             Action: No temperature adjustment needed
                             {% endif %}
@@ -588,20 +660,51 @@ actions:
           # --- WEATHER DISABLED PATH ---
           # This block executes if the weather integration is disabled or no entity is provided.
           # The logic is a simplified version of the weather-enabled path, without weather adjustments.
-          # Calculates the new low and high setpoints, rounded to the nearest 0.5°.
+                    # Calculate new target setpoints with directional adjustments
           - variables:
-              new_target_low: >
-                {% set base_low = current_target_low + offset_adjustment %}
-                {{- (base_low * 2) | round / 2 -}}
-          - variables:
-              new_target_high: >
-                {% set base_high = current_target_high + offset_adjustment %}
-                {% set final_low = new_target_low | float %}
-                {% if base_high < (final_low + 1) %}
-                  {{- ((final_low + 1) * 2) | round / 2 -}}
+              # Calculate the new heating setpoint
+              calculated_low: >-
+                {% if temp_difference < -0.5 %}
+                  {% if offset_adjustment > 0 %}
+                    {{ ((current_target_low + offset_adjustment|abs) * 2) | round / 2 }}
+                  {% else %}
+                    {{ current_target_low }}
+                  {% endif %}
                 {% else %}
-                  {{- (base_high * 2) | round / 2 -}}
+                  {{ current_target_low }}
                 {% endif %}
+
+          - variables:
+              # Make new_target_low a simple variable assignment
+              new_target_low: "{{ calculated_low }}"
+
+          - variables:
+              # Calculate the new cooling setpoint
+              calculated_high: >-
+                {% if temp_difference > 0.5 %}
+                  {% if offset_adjustment < 0 %}
+                    {{ ((current_target_high + offset_adjustment) * 2) | round / 2 }}
+                  {% else %}
+                    {{ current_target_high }}
+                  {% endif %}
+                {% else %}
+                  {{ current_target_high }}
+                {% endif %}
+
+          - variables:
+              # Ensure minimum 1°C difference between setpoints
+              final_high: >-
+                {% set low = new_target_low|float %}
+                {% set high = calculated_high|float %}
+                {% if high < (low + 1) %}
+                  {{ ((low + 1) * 2) | round / 2 }}
+                {% else %}
+                  {{ high }}
+                {% endif %}
+
+          - variables:
+              # Make new_target_high a simple variable assignment
+              new_target_high: "{{ final_high }}"
           # Creates a persistent notification for debugging, indicating weather is disabled.
           - choose:
               - conditions: "{{ debug_notifications_enabled }}"
@@ -618,8 +721,12 @@ actions:
 
                         Weather Integration: Off
 
-                        {% if offset_adjustment != 0 %}
-                        Action: Adjusting by {{ offset_adjustment }}°C → New Range: {{ new_target_low }}-{{ new_target_high }}°C
+                        {% set low_change = new_target_low|float - current_target_low|float %}
+                        {% set high_change = new_target_high|float - current_target_high|float %}
+                        {% if low_change != 0 or high_change != 0 %}
+                        Action: Adjusting setpoints → New Range: {{ new_target_low }}-{{ new_target_high }}°C
+                        {% if low_change != 0 %}Heat: {{ current_target_low }} → {{ new_target_low }} ({{ low_change|round(1) }}°C){% endif %}
+                        {% if high_change != 0 %}Cool: {{ current_target_high }} → {{ new_target_high }} ({{ high_change|round(1) }}°C){% endif %}
                         {% else %}
                         Action: No temperature adjustment needed
                         {% endif %}
